--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -7,6 +7,7 @@
 .main-column-layout {
   display: flex;
   flex-direction: column;
+  height: 800px;
 }
 
 .clothing-components-layout {
@@ -504,8 +505,9 @@ button {
 .closet-inner-container {
   display: flex;
   flex-direction: column;
+  flex: auto;
   width: 100%;
-  overflow: auto;
+  height: 100%;
 }
 
 .sticky-container {
@@ -516,11 +518,11 @@ button {
 
 .closet-view {
   display: flex;
-  flex-direction: column;
-  justify-content: left;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
   gap: 16px;
+  flex-grow: 1;
   overflow-y: auto;
 } 
 
@@ -547,7 +549,9 @@ button {
   align-items: center;
   justify-content: center;
   width: auto;
-  height: 275px;
+  height: auto;
+  max-width: 250px;
+  max-height: 275px;
   z-index: 0;
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); 
