--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -7,7 +7,7 @@
 .main-column-layout {
   display: flex;
   flex-direction: column;
-  height: 800px;
+  height: 100vh;
 }
 
 .clothing-components-layout {
