--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -718,6 +718,51 @@ button {
   margin-bottom: 50px;
 }
 
+/* Edit modal */
+
+.edit-category-modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.edit-category {
+  display: flex;
+  flex-direction: column;
+  background-color: #f9f9f9;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+  padding: 20px;  
+  background-color: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.edit-modal-button-container {
+  flex-direction: row;
+}
+
+.edit-modal-button {
+  margin: 5px;
+  width: 83px;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #50C878;
+  color: black;
+  border: 1px solid black;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+}
+
 /* Image Modal */
 
 .modal-background {
