--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -730,8 +730,12 @@ button {
   background-color: #f9f9f9;
   justify-content: center;
   align-items: center;
+  height: 200px;
+  width: 300px;
   padding: 20px;  
+  border-radius: 10px;
   background-color: 0 2px 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .edit-modal-button-container {
