--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -778,9 +778,10 @@ button {
 }
 
 .image-modal {
-  background-color: #f9f9f9;
-  padding: 20px;  
+  background-color: rgb(112, 212, 112);
+  padding: 8px;  
   background-color: 0 2px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 18px;
 }
 
 .image-modal-content {
@@ -795,6 +796,13 @@ button {
   width: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+}
+
+.image-modal-buttons {
+  display: flex;
+  flex-direction: flex-row;
+  justify-content: center;
+  align-items: middle;
 }
 
 .image-header {
