--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -47,7 +47,7 @@
 .navbar-buttons-container {
   display: flex;
   flex-direction: column;
-  padding: 5px
+  padding: 5px;
 }
 
 .logo-container {
@@ -55,7 +55,7 @@
   flex-direction: column;
   align-items: middle;
   justify-content: center;
-  padding: 5px
+  padding: 5px;
 }
 
 .logo-sizing {
@@ -519,15 +519,29 @@ button {
 /* ClosetView Component */
 
 .closet-inner-container {
-  display: flex;
-  flex-direction: column;
-  flex: auto;
-  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr auto;  
+  grid-gap: 10px;
+  width: 100%;
+  margin-top: 150px;
   width: 100%;
   height: 100%;
 }
 
+.small-column {
+  background-color: #a4e333;
+  padding: 10px; 
+}
+
+.large-column {
+  background-color: #f0f0f0; 
+  padding: 10px; 
+}
+
+
 .sticky-container {
+  display: flex;
+  flex-direction: col;
   position: sticky;
   top: 10px;
   z-index: 1; 
