--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -52,7 +52,26 @@
 
 .navbar-button-user-open-icon {
   display: fixed;
+  width: 33px;
   top:0;
+  display: block;
+  background-color: #62ef5e;
+  color: black;
+  border: 1px solid black;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+}
+
+.user-open-icon-open {
+  height: 20px;
+  width: 20px;
+}
+
+.user-open-icon-closed {
+  height: 20px;
+  width: 20px;
 }
 
 .logo-container {
