--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -31,6 +31,7 @@
 .navbar {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   background-color: #a4e333;
   width: 100%;
   height: 120px;
@@ -88,9 +89,6 @@
   align-items: middle;
   justify-content: center;
   padding: 5px;
-  position: fixed;
-  top: 0;
-  right: 0;
 }
 
 .logo-closed-container {
@@ -320,7 +318,6 @@
   display: flex;
   flex-direction: column;
   padding: 5px;
-  margin-left: 30px;
 }
 
 .upload-heading{
