--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -63,6 +63,7 @@
 .navbar-button-user-open-icon {
   position: fixed;
   top: 0;
+  left: 0;
   width: 33px;
   display: block;
   background-color: #62ef5e;
@@ -88,6 +89,7 @@ width: 20px;
     position: fixed;
     z-index: 1;
     top: 0;
+    margin-left: 60px;
     width: 33px;
     display: block;
     background-color: #62ef5e;
