--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -1033,30 +1033,25 @@ button {
 .wardrobe-outfit-item-container {
   display: flex;
   flex-direction: row;
-  border-style: solid;
-  border-bottom: 2px;
-  border-color: black;
   padding: 8px;
 }
 
 .wardrobe-item-card-container {
   display: flex;
   flex-direction: row;
-  border-style: solid;
-  border-bottom: 2px;
-  border-color: black;
   padding: 8px;
   margin-bottom: 10px;
 }
 
 
 .wardrobe-list-itemIndex {
-  background-color: rgb(255, 246, 246);
+  background-color: rgb(255, 205, 139);
   display: flex;
   flex-direction: column;
   padding: 20px;
   border-radius: 20px;
   margin-right: 6px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
 }
 
 .wardrobe-item-card {
