--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -4,18 +4,18 @@
   font-family: 'Varela Round', sans-serif;
 }
 
-.main-column-layout {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
 .clothing-components-layout {
   max-width: 90%;
 }
 
 /* Navbar Design */
 
+
+.main-column-layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
 .navbar-container {
   display: flex;  
@@ -33,8 +33,6 @@
   flex-direction: row;
   justify-content: center;
   background-color: hsl(105, 67%, 67%);
-  width: 100%;
-  height: 120px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
   border-radius: 8px; 
 }
@@ -42,7 +40,6 @@
 .navbar-menu {
   display: flex;
   flex-direction: row;
-  align-items: center;
   list-style-type: none;
 }
 
@@ -50,7 +47,6 @@
   display: flex;
   color: #333;
   font-weight: 700;
-  line-height: 40px;
   text-decoration: none;
 }
 
@@ -594,6 +590,87 @@ button {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
+/* SavedOutfit Component */
+
+.saved-outfit-view-container {
+  display: flex;
+  flex-direction: column;
+  align-items: middle;
+  justify-content: center;
+  height: 160px;
+  max-width: 340px;
+  justify-content: flex-start;
+}
+
+
+.saved-outfit-view-main {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.saved-outfit-item-card {
+  width: 200px;
+  height: 240px;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 14px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+
+.saved-outfit-item-category-title {
+  font-size: 12px;
+  color: black;
+}
+
+.saved-outfit-main-title {
+  font-size: 24px;
+  font-family: 'Varela Round', sans-serif;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+}
+
+
+.remove-saved-outfit-button {
+  margin: 5px;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #50C878;
+  color: black;
+  border: 1px solid black;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+}
+
+.remove-saved-outfit-button:hover {
+  background-color: #228B22;
+  color: black;
+}
+
+
+.saved-outfit-item-card:hover {
+  transform: translateY(-5px);
+}
+
+
+.saved-outfit-image-wrapper {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
 /* ClosetView Component */
 
 .closet-inner-container {
@@ -1005,11 +1082,7 @@ button {
 .wardrobe-view-main {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
-}
-
-.wardrobe-outfit-name {
-  display: flex;
+  align-items: middle;
 }
 
 .wardrobe-view-body {
@@ -1017,11 +1090,30 @@ button {
   flex-direction: column;
 }
 
-.wardrobe-heading {
+.wardrobe-item-card-container {
   display: flex;
+  flex-direction: wrap;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.wardrobe-item-card {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 16px;
+  border-radius: 20px;
+  height: 300;
+  width: auto;
+  position: relative;
+  z-index: 1;
 }
 
 
+.wardrobe-heading {
+  display: flex;
+}
 
 .wardrobe-list-container {
   display: flex;
@@ -1035,12 +1127,6 @@ button {
   padding: 8px;
 }
 
-.wardrobe-item-card-container {
-  display: flex;
-  flex-direction: row;
-  padding: 8px;
-  margin-bottom: 10px;
-}
 
 
 .wardrobe-list-itemIndex {
@@ -1070,18 +1156,6 @@ button {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
 }
 
-.wardrobe-item-card {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 16px;
-  border-radius: 20px;
-  height: 300;
-  width: auto;
-  position: relative;
-  z-index: 1;
-}
 
 .wardrobe-item-card img {
   max-width: 100%;
