--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -16,19 +16,7 @@
 
 /* Navbar Design */
 
-.navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background-color: hsl(105, 67%, 67%);
-  width: 100%;
-  height: 120px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
-  border-radius: 8px; 
-}
-
 .navbar-container {
-  display: flex;  
   width: 100%;
   position: sticky;
   top: 0;
@@ -38,32 +26,26 @@
   left: 0;
 }
 
+.navbar-element-container {
+  width: 100%;
+}
+
+
+.navbar {
+  background-color: hsl(105, 67%, 67%);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+  border-radius: 8px; 
+}
+
 .navbar-menu {
-  display: flex;
-  flex-direction: row;
   list-style-type: none;
 }
 
-.navbar-menu a {
-  display: flex;
-  color: #333;
-  font-weight: 700;
-  line-height: 40px;
-  text-decoration: none;
-}
-
 .navbar-buttons-container {
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
+
 }
 
 .navbar-button-user-open-icon {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 33px;
-  display: block;
   background-color: #62ef5e;
   color: black;
   border: 1px solid black;
@@ -84,19 +66,15 @@ width: 20px;
 }
 
 .navbar-button-open {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    margin-left: 60px;
-    width: 33px;
-    display: block;
-    background-color: #62ef5e;
-    color: black;
-    border: 1px solid black;
-    border-radius: 14px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
+  z-index: 1;
+  width: 33px;
+  background-color: #62ef5e;
+  color: black;
+  border: 1px solid black;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
 }
 
 .user-open-icon-closed {
@@ -113,9 +91,7 @@ width: 20px;
 }
 
 .menu-open-container {
-  position: absolute;
-  top: 0;
-  margin-top: 10px;
+
 }
 
 .logo-closed-container {
@@ -139,13 +115,10 @@ width: 20px;
 }
 
 .navbar-button {
-  font-size: 12px;
-  padding: 5px 10px;
   background-color: #50C878;
   color: black;
   border: 1px solid black;
   border-radius: 14px;
-  width: 70px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
