--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -16,33 +16,34 @@
 
 /* Navbar Design */
 
+/* navbar-container is in parent component */
 .navbar-container {
   width: 100%;
   position: sticky;
   top: 0;
   z-index: 2;
-  position: fixed;
-  top: 0;
-  left: 0;
 }
 
 .navbar-element-container {
+  display: flex;
+  align-items: middle;
   width: 100%;
 }
 
-
 .navbar {
+  display: flex;
+  align-items: middle;
   background-color: hsl(105, 67%, 67%);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
   border-radius: 8px; 
 }
 
-.navbar-menu {
-  list-style-type: none;
+.navbar-buttons-container {
+  margin-top: 0;
 }
 
-.navbar-buttons-container {
-
+.navbar-menu {
+  list-style-type: none;
 }
 
 .navbar-button-user-open-icon {
@@ -646,7 +647,7 @@ button {
   grid-template-columns: 1fr auto;  
   grid-gap: 10px;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 20px;
   width: 100%;
   height: 100%;
 }
@@ -683,6 +684,7 @@ button {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: middle;
   padding:6px;
 }
 
