--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -47,11 +47,8 @@
   gap: 10px;
 }
 
-.navbar-menu {
-  list-style-type: none;
-}
-
 .navbar-button-user-open-icon {
+  position: relative;
   background-color: #62ef5e;
   color: black;
   border: 1px solid black;
@@ -59,63 +56,6 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
-}
-
-.user-open-icon-open {
-  height: 20px;
-  width: 20px;
-}
-
-.navbar-open-icon {
-height: 20px;
-width: 20px;
-}
-
-.navbar-button-open {
-  z-index: 1;
-  width: 33px;
-  background-color: #62ef5e;
-  color: black;
-  border: 1px solid black;
-  border-radius: 14px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); 
-}
-
-.user-open-icon-closed {
-  height: 20px;
-  width: 20px;
-}
-
-.logo-menu-box {
-  display: flex;
-  flex-direction: column;
-}
-
-.menu-open-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.logo-closed-container {
-  font-size: 12px;
-  cursor: pointer;
-  border: none;
-  transition: background-color 0.3s ease;
-  background-color: hsl(105, 67%, 67%);
-  box-shadow: none;
-}
-
-.logo-sizing {
-  display: flex;
-  flex-direction: column;
-  align-items: middle;
-  justify-content: center;
-  height: 75px;
-  width: auto;
-  padding: 5px;
-  border-style: none;
 }
 
 .navbar-button {
@@ -132,6 +72,28 @@ width: 20px;
   background-color: #228B22;
   color: black;
 }
+
+.user-open-icon-open {
+  height: 20px;
+  width: 20px;
+}
+
+.user-open-icon-closed {
+  height: 20px;
+  width: 20px;
+}
+
+.logo-sizing {
+  display: flex;
+  flex-direction: column;
+  align-items: middle;
+  justify-content: center;
+  height: 75px;
+  width: auto;
+  padding: 5px;
+  border-style: none;
+}
+
 
 /* Login Modal */
 
