--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -6,7 +6,7 @@
 .main-column-layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   padding: 10px;
 }
 
@@ -1018,69 +1018,33 @@ button {
 .wardrobe-view-main {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
-}
-
-.wardrobe-outfit-name {
-  display: flex;
-}
-
-.wardrobe-view-body {
-  display: flex;
-  flex-direction: column;
+  width: 95%;
 }
 
 .wardrobe-heading {
   display: flex;
 }
 
-
-
-.wardrobe-list-container {
+.wardrobe-heading-text {
   display: flex;
-  flex-direction: row;
-  list-style-type: none;
 }
 
-.wardrobe-outfit-item-container {
-  display: flex;
-  flex-direction: row;
-  padding: 8px;
-}
-
-.wardrobe-item-card-container {
-  display: flex;
-  flex-direction: row;
-  padding: 8px;
-  margin-bottom: 10px;
-}
-
-
-.wardrobe-list-itemIndex {
-  background-color: rgb(204, 255, 200);
+.wardrobe-container {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #1a6902;
-  border-radius: 20px;
-  margin-right: 6px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
+  justify-content: center;
+  align-items: center;
 }
 
-.wardrobe-list-itemIndex:hover {
-  cursor: pointer;
-  background-color: rgb(119, 236, 111);
+.wardrobe-view-body {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #1a6902;
-  border-radius: 20px;
-  margin-right: 6px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
+  padding: 6px;
+}
+
+.wardrobe-card-container {
+  display: flex;
+  flex-direction: row;
 }
 
 .wardrobe-item-card {
@@ -1088,12 +1052,56 @@ button {
   flex-direction: column;
   background-color: #fff;
   border: 1px solid #ddd;
-  padding: 16px;
+  padding: 20px;
   border-radius: 20px;
-  height: 300;
-  width: auto;
   position: relative;
   z-index: 1;
+}
+
+.wardrobe-outfit-name {
+  display: flex;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+.wardrobe-ul-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.wardrobe-ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.wardrobe-outfit-item-container {
+  display: flex;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+.wardrobe-list-itemIndex {
+  background-color: rgb(204, 255, 200);
+  display: flex;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #1a6902;
+  border-radius: 20px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
+}
+
+.wardrobe-list-itemIndex:hover {
+  cursor: pointer;
+  background-color: rgb(119, 236, 111);
+  display: flex;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #1a6902;
+  border-radius: 20px;
+  margin-right: 6px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); 
+}
+
+.wardrobe-list-category{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 .wardrobe-item-card img {
