--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -1044,8 +1044,8 @@ button {
 .wardrobe-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
 }
 
