--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  height: 100%;
 }
 
 .clothing-components-layout {
@@ -533,6 +534,7 @@ button {
   align-items: center;
   justify-content: center;
   padding: 20px;
+  height: 100%;
 }
 
 
