--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -55,8 +55,13 @@
 
 .navbar-buttons-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 10px;
+}
+
+.navbar-menu-open-container{
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar-button {
