--- a/client/closet-app/src/App.css
+++ b/client/closet-app/src/App.css
@@ -568,6 +568,7 @@ button {
 .saved-outfit-view-main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
   padding-bottom: 60px;
 }
